...
                modifier = Modifier.width(130.dp).padding(top = 8.dp),
                singleLine = true
            )
        }
        Column(horizontalAlignment = Alignment.End) {
            Button(onClick = { viewModel.toggleHistoryDialog(true) }) {
                Text("Scorecard")
            }
            Spacer(modifier = Modifier.height(8.dp))
            if (state.targetScore == null) {
                Button(onClick = { viewModel.nextInnings() }) {
                    Text("Next Innings")
                }
...
        Column(modifier = Modifier.padding(16.dp).fillMaxWidth()) {
            Row(modifier = Modifier.fillMaxWidth(), horizontalArrangement = Arrangement.SpaceBetween) {
                Column(modifier = Modifier.weight(1f)) {
                    OutlinedTextField(
                        value = state.striker.name,
                        onValueChange = { viewModel.updateStrikerName(it) },
                        label = { Text("Striker *") },
                        modifier = Modifier.fillMaxWidth().padding(end = 4.dp),
                        singleLine = true
                    )
                    Text(
                        text = "${state.striker.runs} (${state.striker.balls})",
                        fontWeight = FontWeight.Bold,
...
